tests/escript/scripts/escript_invalid_too_many_values_to_unpack.py.out
Error in script: At line 3, ValueError: too many values to unpack (expected 2)
