tests/escript/scripts/escript_invalid_too_many_values_to_unpack.py
# python3;failure
x, y = (1, 2, 3)